# gb-live32

./: .gitignore  .gitmodules  LICENSE-MIT  README.markdown
.github/scripts/: install-cross.sh
.github/workflows/: ci.yml
GB-LIVE32.X/: cmds.c  cmds.h  hardware.c  hardware.h  main.c  system.h  usb_config.h  usb_descriptors.c
GB-LIVE32.X/nbproject/: configurations.xml  project.xml
gb-live32/: Cargo.toml  Cross.toml
gb-live32/src/: lib.rs  main.rs
