[package]
name = "gb-live32"
version = "2.1.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
description = "CLI for the GB-LIVE32 rapid development board"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.75"
bufstream = "0.1"
clap = "2.31"
cobs = "0.2.3"
itertools = "0.12.0"
log = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }
serialport = "3.0"
simplelog = "0.12.1"
thiserror = "1.0.50"
